--- a/client/styles.css
+++ b/client/styles.css
@@ -1,29 +1,133 @@
-*{
+/*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background-color:transparent}a:active,a:hover{outline:0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:bold}dfn{font-style:italic}h1{font-size:2em;margin:.67em 0}mark{background:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-0.5em}sub{bottom:-0.25em}img{border:0}svg:not(:root){overflow:hidden}figure{margin:1em 40px}hr{box-sizing:content-box;height:0}pre{overflow:auto}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0}input[type="number"]::-webkit-inner-spin-button,input[type="number"]::-webkit-outer-spin-button{height:auto}input[type="search"]{-webkit-appearance:textfield;box-sizing:content-box}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}legend{border:0;padding:0}textarea{overflow:auto}optgroup{font-weight:bold}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}
+
+* {
   box-sizing: border-box;
 }
-html,body,#app {
-  height:100%;
-  margin: 0;
-  padding: 0;
-}
+
 body {
   background: #eee;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
 }
-h1{
+
+.container {
+  display: flex;
+}
+
+aside {
+  flex: 3;
+  position: relative;
+  background: #2a2b30;
+  box-shadow: inset -10px 0 10px rgba(0, 0, 0, 0.2);
+}
+
+nav {
+  postion: fixed;
+  top: 0;
+}
+
+nav h1 {
+  text-align: center;
+}
+
+nav a {
+  text-decoration: none;
+  color: #fff;
+  transition: color 0.5s ease-in;
+}
+
+nav a:hover {
+  color: #5c5edc;
+}
+
+nav ul li {
+  border-width: 1px 0 0 0;
+  border-color: rgba(0, 0, 0, 0.25);
+  border-style: solid;
+}
+
+nav ul li:last-child {
+  border-bottom-width: 1px;
+}
+
+nav ul li a {
+  padding: 10px;
+  display: block;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+  transition: background 0.5s ease-in;
+}
+
+nav ul li a:hover {
+  background-color: rgba(255, 255, 255, 0.05);
+}
+
+.content {
+  flex: 9;
+  padding: 20px;
+}
+
+.search-box {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.search-box input[name="search"] {
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.search-box button {
+  background: #5c5edc;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+  color: #fff;
+  letter-spacing: 1px;
+}
+
+.search-box input[name="search"],
+.search-box button {
+  padding: 10px;
+  font-size: 1.25rem;
+  border: 0;
+}
+
+.job {
+  background: #fff;
+  padding: 15px;
+  margin-bottom: 10px;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
+}
+
+.job h2 {
+  margin: 0 0 7px;
+  font-size: 1rem;
+  line-height: 1rem;
+  color: #5c5edc;
+  border-bottom: solid 1px rgba(0,0,0, 0.1);
+  padding-bottom: 8px;
+}
+
+.job .description {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+h1 {
   font-weight: 200;
   color: #3b414c;
   font-size: 20px;
 }
+
 ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
 }
+
 .app {
   white-space: nowrap;
   height:100%;
 }
+
 .list {
   position: relative;
   text-align: center;
@@ -35,6 +139,7 @@ ul {
   padding: 0 20px;
   overflow: auto;
 }
+
 .list:not(:last-child):after{
   content: "";
   position: absolute;
@@ -44,6 +149,7 @@ ul {
   height: 99%;
   background: linear-gradient(to bottom, #eee 0%, #ccc 50%, #eee 100%) fixed;
 }
+
 .card {
   position: relative;
   text-align: left;
@@ -57,38 +163,46 @@ ul {
   border-radius: 3px;
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
 }
+
 .card__title {
   font-size: 0.75em;
   font-weight: bold;
   border-bottom: solid 5px transparent;
 }
+
 .card__title:before {
   display: inline-block;
   width: 0.75em;
   content: '▸';
 }
+
 .card__title--is-open:before {
   content: '▾';
 }
+
 .card_company_name {
   font-size: 0.75em;
   display: inline-block;
   font-style: italic;
   margin-bottom: 5px;
 }
+
 .card_details {
   font-size: 0.75em;
 }
+
 .checklist__task:first-child {
   margin-top: 10px;
   padding-top: 10px;
   border-top: dashed 1px #ddd;
 }
+
 .checklist__task--remove:after{
   display: inline-block;
   color: #d66;
   content: "+";
 }
+
 .is__dragging__overlay {
   position: absolute;
   width: 100%;
@@ -98,12 +212,14 @@ ul {
   background-color: rgba(200, 200, 200, 0.8);
   border-left: 7px solid #aaa;
 }
+
 .toolbar {
   height: 40px;
   text-align: right;
   background-color: #fefefe;
   border-bottom: 1px solid #cecece;
 }
+
 .filter__input {
   width: 12.5%;
   height: 30px;
