--- a/client/styles.css
+++ b/client/styles.css
@@ -6,29 +6,61 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
 }
 
 body {
-  background: #eee;
+  background: rgb(59,61,74);
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
 }
 
 .container {
   display: flex;
+  flex-direction: column;
 }
 
-aside {
-  flex: 3;
-  position: relative;
+header {
+  display: flex;
+  justify-content: space-between;
   background: #2a2b30;
-  box-shadow: inset -10px 0 10px rgba(0, 0, 0, 0.2);
+}
+
+header h1 {
+  text-align: center;
+  margin: 15px 0 0 10px;
+}
+
+header h1 a {
+  display: block;
+  position: relative;
+  transition: opacity 0.25s ease-in;
+}
+
+header h1 a:hover {
+  opacity: 0.5;
+}
+
+header h1 img {
+  width: 150px;
+  position: absolute;
 }
 
 nav {
-  postion: fixed;
-  top: 0;
 }
 
-nav h1 {
-  text-align: center;
+nav ul {
+  justify-content: center;
+  display: flex;
+}
+
+nav ul li {
+  border-width: 1px 0 0 0;
+  border-color: rgba(0, 0, 0, 0.25);
+  border-style: solid;
+  line-height: 2.5rem;
+  font-size: 1.1rem;
+  letter-spacing: 1px;
+}
+
+nav ul li:last-child {
+  border-bottom-width: 1px;
 }
 
 nav a {
@@ -41,16 +73,6 @@ nav a:hover {
   color: #5c5edc;
 }
 
-nav ul li {
-  border-width: 1px 0 0 0;
-  border-color: rgba(0, 0, 0, 0.25);
-  border-style: solid;
-}
-
-nav ul li:last-child {
-  border-bottom-width: 1px;
-}
-
 nav ul li a {
   padding: 10px;
   display: block;
@@ -60,6 +82,29 @@ nav ul li a {
 
 nav ul li a:hover {
   background-color: rgba(255, 255, 255, 0.05);
+}
+
+nav a i {
+  margin-right: 5px;
+}
+
+.fa.fa-user {
+  font-size: 1.75rem;
+  text-decoration: none;
+  color: #fff;
+  padding: 11px 14px 0;
+  transition: color 0.25s;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 45px;
+  display: block;
+  height: 50px;
+  text-align: center;
+  margin: 4px 10px 0 0;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+}
+
+.fa-user:hover {
+  color: rgba(255, 255, 255, 0.75);
 }
 
 .content {
