Home page search styling

--- a/client/styles.css
+++ b/client/styles.css
@@ -107,6 +107,100 @@ nav a i {
   color: rgba(255, 255, 255, 0.75);
 }
 
+form.search {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  /*border: solid 1px red;*/
+}
+
+form.search div {
+  display: flex;
+  justify-content: center;
+}
+
+form.search .advanced {
+  color: #fff;
+  text-decoration: none;
+}
+
+.main-search input {
+  line-height: 2.5rem;
+  font-size: 1.5rem;
+  padding-left: 10px;
+  border: solid 1px rgba(0, 0, 0, 0.15);
+  margin: 5px;
+  color: rgb(92,94,220);
+}
+
+.main-search button {
+  color: rgb(92,94,220);
+  font-size: 3rem;
+  padding: 0;
+  background: transparent;
+  border: 0;
+}
+
+/* radio-box */
+.radio-box {
+  display: flex;
+  margin: 0 10px 0 0;
+}
+
+.radio-box:last-child {
+  margin-right: 0;
+}
+
+.radio-box > div {
+  position: relative;
+  border: solid 1px red;
+}
+
+.radio-box > div span,
+.radio-box > div input {
+  padding: 5px;
+  text-align: center;
+}
+
+.radio-box > div input {
+  position: absolute;
+  left: 0;
+  top: 0;
+  border: green solid 1px;
+  width: 100%;
+  height: 100%;
+}
+
+.radio-box > div input {
+  opacity: 0;
+}
+
+/* range */
+.radius {
+  display: flex;
+  flex-direction: column;
+  margin: 0 10px 0 0;
+}
+
+.radius h3 {
+  padding: 0;
+  margin: 0;
+}
+
+.range {
+  font-size: 12px;
+}
+
+.range {
+  display: flex;
+  justify-content: space-between;
+}
+
+.range span:last-child {
+  text-align: right;
+}
+
+/* Possible deprecation */
 .content {
   flex: 9;
   padding: 20px;
@@ -135,7 +229,7 @@ nav a i {
   border: 0;
 }
 
-.job {
+/*.job {
   background: #fff;
   padding: 15px;
   margin-bottom: 10px;
@@ -154,7 +248,7 @@ nav a i {
 .job .description {
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
+}*/
 
 h1 {
   font-weight: 200;
