--- a/client/styles.css
+++ b/client/styles.css
@@ -128,6 +128,16 @@ nav a i {
   height: 600px;
 }
 
+/*.content {
+  flex: 9;
+  background-color: #ececec;
+}
+
+.home {
+  margin: 20px;
+}
+*/
+
 .searchLogo {
   max-width: 45%;
   margin-bottom: 20px;
