--- a/client/styles.css
+++ b/client/styles.css
@@ -42,6 +42,7 @@ header h1 img {
   position: absolute;
 }
 
+/* navigation styles */ 
 nav {
   flex: 9;
 }
@@ -106,6 +107,21 @@ nav a i {
 
 .fa-user:hover {
   color: rgba(255, 255, 255, 0.75);
+}
+/* navigation styles */ 
+
+/* homepage */
+.search-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 500px;
+}
+
+.searchLogo {
+  max-width: 25%;
+  margin-bottom: 20px;
 }
 
 form.search {
