--- a/client/styles.css
+++ b/client/styles.css
@@ -797,3 +797,47 @@ iframe {
   font-size: 1.5em;
   font-style: bold;
 }
+
+.fa.fa-times {
+  position: absolute;
+  width:10px;
+  height: 10px;
+  right: 5px;
+  top: 5px;
+  color: #dcdcdc;
+  font-size: 14px;
+  transition: 0.25s;
+}
+
+.fa.fa-times:hover {
+  color: #888;
+}
+
+.fa.fa-plus {
+  position: absolute;
+  height: 56px;
+  width: 56px;
+  z-index: 2;
+  right: 20px;
+  bottom: 20px;
+  background: #00B24A;
+  color: #ececec;
+  border-radius: 100%;
+  font-size: 28px;
+  text-align: center;
+  text-decoration: none;
+  line-height: 50px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+  padding-top: 5px;
+  transition: 0.25s;   
+  opacity: 0.7;
+}
+
+.fa.fa-plus:hover {
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.7);
+  background: #00B24A;
+  color: white;
+  opacity: 1;
+  transform: scale(0.95,0.95);
+}
+
