--- a/client/styles.css
+++ b/client/styles.css
@@ -516,6 +516,7 @@ ul {
   width: 25%;
   padding: 0 20px;
   overflow: auto;
+  background-color: #ececec;
 }
 
 .list:not(:last-child):after{
@@ -534,7 +535,6 @@ ul {
   z-index: 1;
   background: #fff;
   width: 100%;
-  max-height: 500px;
   padding: 10px 10px 10px 15px;
   margin: 0 0 10px 0;
   overflow: auto;
@@ -544,14 +544,20 @@ ul {
 }
 
 .card__title {
-  font-size: 0.75em;
+  font-size: 1em;
   font-weight: bold;
   border-bottom: solid 5px transparent;
 }
 
+.position__name {
+  display: block;
+  font-weight: 300;
+  font-style: italic;
+}
+
 .card__title:before {
   display: inline-block;
-  width: 0.75em;
+  width: 1em;
   content: '▸';
 }
 
@@ -560,7 +566,7 @@ ul {
 }
 
 .card_company_name {
-  font-size: 0.75em;
+  font-size: 1em;
   display: inline-block;
   font-style: italic;
   margin-bottom: 5px;
@@ -844,3 +850,29 @@ iframe {
 .fa.fa-times.remove-event:hover {
   color: #ff3333;
 }
+
+.note-container {
+}
+
+.card-count {
+  color: #00B24A;
+}
+
+.toggle-enter {
+  max-height: 0;
+  overflow: hidden;
+}
+.toggle-enter.toggle-enter-active { 
+  max-height: 300px;
+  overflow: hidden;
+  transition: max-height .25s ease-in;
+}
+.toggle-leave {
+  max-height: 300px;
+  overflow: hidden;
+}
+.toggle-leave.toggle-leave-active {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height .25s ease-out;
+} 
