--- a/client/styles.css
+++ b/client/styles.css
@@ -584,3 +584,12 @@ ul {
 .fa.fa-times.remove-event:hover {
   color: #ff3333;
 }
+
+.saved-search {
+  padding-left: 1em;
+  color: #1144ff;
+}
+
+.saved-search .ss {
+  cursor: pointer;
+}
