--- a/client/styles.css
+++ b/client/styles.css
@@ -244,9 +244,14 @@ form.search .advanced {
 /* homepage */
 
 /* search results */
+.search {
+  justify-content: space-between;
+  width: 100%;
+}
+
 .search-results {
   display: flex;
-  max-width: 900px;
+  max-width: 1100px;
 }
 
 .search-results aside {
@@ -612,12 +617,21 @@ ul {
 
 .saved-search {
   padding-left: 1em;
-  color: #1144ff;
-  position: fixed;
-  right: 0;
-  bottom: 60px;
+  color: rgb(92,94,220);
   width: 19%;
-  background: rgb(28,29,34);
+  background: rgb(28, 29, 34);
+  position: relative;
+}
+
+.save-search,
+.saved-search li {
+  line-height: 1.5rem;
+  margin: 0 0 10px;
+  border-bottom: solid 1px rgb(92, 94, 220);
+}
+
+.saved-search > div {
+  position: fixed;
 }
 
 .saved-search h4 {
@@ -626,4 +640,26 @@ ul {
 
 .saved-search li:hover {
   cursor: pointer;
+}
+
+.save-search {
+  width: 235px;
+  opacity: 0.6;
+  transition: opacity 0.5s ease-in;
+  margin-top: 20px;
+}
+
+.save-search:hover {
+  opacity: 1;
+}
+
+.save-search input,
+.save-search button {
+  background: transparent;
+  border: 0;
+}
+
+.save-search > div {
+  display: flex;
+  justify-content: space-between;
 }
