--- a/client/styles.css
+++ b/client/styles.css
@@ -680,3 +680,40 @@ ul {
   display: flex;
   justify-content: space-between;
 }
+
+iframe {
+  position: relative;
+  width: 75%;
+  left: 20%;
+}
+
+.fa.fa-bullseye {
+  color: #fff;
+  font-size: 3em;
+  padding-left: 1em;
+}
+
+.url-input {
+  padding-bottom: 1em;
+}
+
+.iframe__aside {
+  position: relative;
+  left: 0;
+  height: 100vh;
+  width: 20%;
+  background-color: #000;
+}
+
+.iframe__container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.iframe-site-name {
+  padding-top: 2em;
+  color: #fff;
+  font-size: 3em;
+  cursor: pointer;
+}
