--- a/client/styles.css
+++ b/client/styles.css
@@ -542,6 +542,7 @@ ul {
   z-index: 5;
   background: #fff;
   box-shadow: 0 6px 6px rgba(0, 0, 0, 0.30);
+  border-color: #00CED1;
   transform: scale(1.008, 1.008);
 }
 
@@ -599,9 +600,8 @@ ul {
   width: 100%;
   height: 100%;
   top: 0; left: 0; bottom: 0; right: 0;
-  z-index: 2;
+  z-index: 1;
   background-color: rgba(200, 200, 200, 0.8);
-  border-left: 7px solid #aaa;
 }
 
 .toolbar {
@@ -615,7 +615,6 @@ ul {
   width: 12.5%;
   height: 30px;
   margin-top: 5px;
-  margin-left: 20px;
   margin-right: 20px;
   margin-bottom: 5px;
   padding-left: 10px;
@@ -938,6 +937,8 @@ iframe {
 }
 
 .job__posting__link {
+  width: 100%;
+  height: 100%;
   color: #999;
   text-decoration: none;
 }
@@ -960,4 +961,72 @@ iframe {
 
 .fa.fa-sticky-note-o {
   margin-top: 10px;
+}
+
+.info__bar {
+  position: relative;
+  top: -10px;
+  left: -16px;
+  width: calc(100% + 27px);
+  height: 22px;
+  background-color: #00CED1;
+  border-radius: 3px 3px 0 0;
+  box-shadow: 0 0px 0px #ccc;
+  padding: 4px 10px 0 10px;
+  font-size: 0.75em;
+  color: #fff;
+}
+
+.info__bar__upcoming__event {
+  float: left;
+  font-style: bold;
+  max-width: 60%;
+  overflow: hidden;
+}
+
+.info__bar__time {
+  float: right;
+  overflow: hidden;
+  max-width: 40%;
+}
+
+.toolbar__button {
+  margin-left: 10px;
+  height: 30px;
+  border: 1px dashed #aaa;
+  border-radius: 3px;
+  background-color: #ccc;
+  outline: none;
+  transition: 0.20s;
+}
+
+.toolbar__button:hover {
+  background-color: #00CED1;
+  color: #fff;
+}
+
+.fa.fa-star.toolbar, .fa.fa-calendar.toolbar, .fa.fa-ban.toolbar {
+  font-size: 1.00em;
+  margin-top: 1px;
+  color: #fff;
+  background: transparent;
+  height: auto;
+  border: none;
+  margin: 0;
+}
+
+.fa.fa-sort-amount-desc.toolbar {
+  font-size: 1em;
+  color: #999;
+  margin-left: 10px;
+  background: transparent;
+  border: none;
+}
+
+.fa.fa-filter.toolbar {
+  font-size: 1em;
+  color: #999;
+  margin-left: 20px;
+  margin-right: 10px;
+  background: transparent;
 }
