--- a/client/styles.css
+++ b/client/styles.css
@@ -1028,5 +1028,19 @@ iframe {
   color: #999;
   margin-left: 20px;
   margin-right: 10px;
-  background: transparent;
+  background: none;
+  border: none;
+  height: auto;
+}
+
+.fa.fa-compress.list {
+  position: absolute;
+  top: 10px;
+  right: 5px;
+  color: #999;
+  font-size: 0.93em;
+  width: auto;
+  height: auto;
+  transform: rotate(45deg);
+  background: none;
 }
