Add style and explanation for the add job workflow

--- a/client/styles.css
+++ b/client/styles.css
@@ -683,25 +683,53 @@ ul {
 
 iframe {
   position: relative;
-  width: 75%;
-  left: 20%;
+  width: 85%;
+  left: 15%;
 }
 
 .fa.fa-bullseye {
   color: #fff;
-  font-size: 3em;
+  font-size: 2.75em;
   padding-left: 1em;
+  padding-top: 0.15em;
+  transition-duration: 0.5s;
+}
+
+.fa.fa-bullseye:hover {
+  font-size: 3em;
+  color: #ff0000;
+}
+
+.fa.fa-plus-circle {
+  color: #fff;
+  font-size: 1.5em;
+  padding-top: 0.75em;
+}
+
+.fa.fa-plus-circle:hover {
+  color: #ff0000;
 }
 
 .url-input {
-  padding-bottom: 1em;
+    height: 1.75em;
+     -webkit-box-shadow: 
+       inset 0 0 8px  rgba(0,0,0,0.1),
+             0 0 16px rgba(0,0,0,0.1); 
+     -moz-box-shadow: 
+       inset 0 0 8px  rgba(0,0,0,0.1),
+             0 0 16px rgba(0,0,0,0.1); 
+     box-shadow: 
+       inset 0 0 8px  rgba(0,0,0,0.1),
+             0 0 16px rgba(0,0,0,0.1); 
+     background: rgba(255,255,255,0.8);
+     margin: 0.75em 0.25em;
 }
 
 .iframe__aside {
   position: relative;
   left: 0;
   height: 100vh;
-  width: 20%;
+  width: 15%;
   background-color: #000;
 }
 
@@ -716,4 +744,31 @@ iframe {
   color: #fff;
   font-size: 3em;
   cursor: pointer;
+}
+
+.iframe-site-name:hover {
+  color: #2244ff;
+}
+
+.help-header {
+  font-size: 1.2em;
+  font-style: bold;
+}
+
+.help-text {
+  font-size:1em;
+  line-height: 1.1em;
+}
+
+.help-container {
+  height: 13em;
+  width: 95%;
+  top:8em;
+  left:0.5em;
+  max-width: 95%;
+  background: #F5D263;
+  position: relative;
+  bottom:20%;
+  overflow: hidden;
+  box-shadow: 0 5px 15px 0 rgba(0,0,0,0.25);
 }
