--- a/client/styles.css
+++ b/client/styles.css
@@ -772,3 +772,17 @@ iframe {
   overflow: hidden;
   box-shadow: 0 5px 15px 0 rgba(0,0,0,0.25);
 }
+
+.expired-text {
+  margin-top: 0.75em;
+  color: red;
+  font-size: 1.5em;
+  font-style: bold;
+}
+
+.saved-text {
+  margin-top: 0.75em;
+  color: green;
+  font-size: 1.5em;
+  font-style: bold;
+}
