Fix App element styles after rebase.

--- a/client/styles.css
+++ b/client/styles.css
@@ -504,10 +504,13 @@ ul {
 .app {
   white-space: nowrap;
   height:100%;
+  width: 100%;
 }
 
 .App {
   background-color: #bcbcbc;
+  height:100%;
+  width: 100%;
 }
 
 .list {
