--- a/client/styles.css
+++ b/client/styles.css
@@ -623,7 +623,7 @@ ul {
 .toolbar {
   height: 40px;
   text-align: right;
-  background-color: #fff;
+  background-color: #fbfbfb;
   border-bottom: 1px solid #e1e1e1;
 }
 
@@ -831,29 +831,28 @@ iframe {
 
 .fa.fa-plus {
   position: absolute;
-  height: 56px;
-  width: 56px;
+  height: 60px;
+  width: 60px;
   z-index: 2;
-  right: 20px;
-  bottom: 20px;
-  background: #D47001;
-  color: #ececec;
-  border-radius: 100%;
-  font-size: 28px;
+  right: 30px;
+  bottom: 30px;
+  background: #829901;
+  color: #fff;
+  border-radius: 12px;
+  font-size: 2.4em;
   text-align: center;
   text-decoration: none;
-  line-height: 50px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
-  padding-top: 5px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.3);
+  border: 2px solid #c5da01;
+  padding-top: 11px;
   transition: 0.25s;   
-  opacity: 0.7;
 }
 
 .fa.fa-plus:hover {
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.7);
-  background: #D47001;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  background: #c5da01;
+  border: 2px solid #E7FF02;
   color: white;
-  opacity: 1;
   transform: scale(0.95,0.95);
 }
 
@@ -1090,14 +1089,18 @@ iframe {
   height: 30px;
   border: 1px dashed #bcbcbc;
   border-radius: 3px;
-  background-color: #dcdcdc;
-  color: #fff;
+  background-color: #ececec;
+  color: #999;
   outline: none;
-  transition: 0.20s;
+  transition: 0.15s;
 }
 
 .remove__card__button:hover {
   background-color: #BCD240;
+}
+
+.delete {
+  margin-left: 0;
 }
 
 .delete:hover {
