--- a/client/styles.css
+++ b/client/styles.css
@@ -122,6 +122,7 @@ nav a i {
 
 /* homepage */
 .search-container {
+  margin-top: 9%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -157,32 +158,21 @@ form.search > div {
 }
 
 form.search .advanced {
-  color: #fff;
+  color: #bcbcbc;
   text-decoration: none;
-  font-size: 0.875rem;
+  font-size: 1rem;
 }
 
-.main-search input {
-  line-height: 2.5rem;
-  font-size: 1.5rem;
-  padding-left: 10px;
-  border: solid 1px rgba(0, 0, 0, 0.15);
-  margin: 5px;
-  color: rgb(92,94,220);
-}
-
-.main-search button {
-  color: rgb(92,94,220);
-  font-size: 3rem;
-  padding: 0;
-  background: transparent;
-  border: 0;
+form.search .advanced .advanced__container {
+  width: 67.5%;
+  margin: 0 25px 0 29px;
 }
 
 /* radio-box */
 .radio-box {
   display: flex;
-  margin: 10px 10px 10px 0;
+  margin: 0 0 1.5% 0;
+  border: none;
 }
 
 .radio-box h3 {
@@ -196,7 +186,7 @@ form.search .advanced {
 
 .radio-box > div {
   position: relative;
-  border: solid 1px rgba(255, 255, 255, 0.1);
+  border-radius: 5px;
   line-height: 2.5rem;
   height: 43px;
   padding: 0 10px;
@@ -204,6 +194,7 @@ form.search .advanced {
 
 .radio-box > div.active {
   background: rgba(255, 255, 255, 0.1);
+  color: #ececec;
 }
 
 .radio-box > div span,
@@ -219,7 +210,6 @@ form.search .advanced {
   position: absolute;
   left: 0;
   top: 0;
-  border: green solid 1px;
   width: 100%;
   height: 100%;
 }
@@ -232,7 +222,7 @@ form.search .advanced {
 .radius {
   display: flex;
   flex-direction: column;
-  margin: 0 10px 0 0;
+  margin: 0;
 }
 
 .radius h3 {
@@ -247,10 +237,16 @@ form.search .advanced {
 .range {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 1.5%;
 }
 
 .range span:last-child {
   text-align: right;
+}
+
+.range__miles__label {
+  position: relative;
+  top: -42px;
 }
 /* homepage */
 
@@ -1127,4 +1123,48 @@ iframe {
 .column__instruction.title {
   margin-top: 25%;
   font-size: 2em;
+}
+
+.main__input {
+  padding-left: 25px;
+  padding-top: 4px;
+  padding-bottom: 2px;
+  color: #bcbcbc;
+  outline: none;
+  background: none;
+  margin: 5px;
+  margin-bottom: 25%;
+  line-height: 2.5rem;
+  font-size: 1.3rem;
+  border: 3px solid #ececec;
+}
+
+.main__input.left {
+  border-radius: 50px 0 0 50px;
+  border-right: none;
+  margin-right: 0;
+  padding-left: 27px;
+}
+
+.main__input.right {
+  border-right: none;
+  border-left: none; 
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.main__search__button { 
+  background: none;
+  color: #ececec;
+  outline: none;
+  border: 3px solid #ececec;
+  border-left: 3px solid #ececec;
+  font-size: 1.3rem;
+  line-height: 2.5rem;
+  letter-spacing: 1px;
+  margin: 5px 0 20% 0;
+  border-radius: 0 50px 50px 0;
+  padding-right: 25px;
+  padding-left: 22px;
+  padding-top: 3px;
 }
