--- a/client/styles.css
+++ b/client/styles.css
@@ -6,7 +6,7 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
 }
 
 body {
-  background: rgb(59,61,74);
+  background: rgb(59, 61, 74);
   background: radial-gradient(circle at center, #303030 0%, #101010 100%);
   font-family: Arial, Helvetica, "Helvetica Neue", sans-serif;
   font-size: 16px;
@@ -25,7 +25,7 @@ body {
 header {
   display: flex;
   justify-content: space-between;
-  background: rgba(0, 0, 0,0.25);
+  background: rgba(0, 0, 0, 0.25);
 }
 
 header h1 {
@@ -158,7 +158,6 @@ form.search {
   display: flex;
   flex-direction: column;
   align-content: center;
-  /*border: solid 1px red;*/
 }
 
 form.search > div {
